--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,20 +2,15 @@ networks:
   notify:
 
 services:
-
-  nginx-service:
-    container_name: nginx-container
+  php:
     build:
-      context: .
-      dockerfile: ./docker/nginx/Dockerfile
-    ports:
-      - "${NGINX_PORT}:80"
+      context: ./
+      dockerfile: ./docker/php/Dockerfile
     volumes:
-      - .:/var/www/html
-      - ./docker/nginx/conf.d:/etc/nginx/conf.d
-    depends_on:
-      - php-service
-      - db-service
+      - .:/app:cached
+      - ./docker/php/conf.d/custom.ini:/etc/php/conf.d/php.ini
+    working_dir: /app
+    container_name: php8
     networks:
       - notify
 
@@ -28,26 +23,6 @@ services:
       MYSQL_ROOT_PASSWORD: root
     ports:
       - "8090:80"
-    networks:
-      - notify
-
-  php-service:
-    build:
-      context: .
-      dockerfile: ./docker/php/Dockerfile
-    container_name: php-container
-    working_dir: /var/www/html
-    volumes:
-      - .:/var/www/html
-      - ./docker/php/conf.d/custom.ini:/usr/local/etc/php/conf.d/custom.ini
-    restart: unless-stopped
-    ports:
-      - "9000:9000"
-    environment:
-      XDEBUG_CONFIG: remote_enable=1 remote_host=host.docker.internal remote_port=9000 remote_autostart=1 remote_connect_back=0
-      PHO_IDE_CONFIG: "serviceName=Docker"
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
     networks:
       - notify
 
@@ -67,4 +42,7 @@ services:
       - notify
 
 volumes:
-  db_data:
+    db_data:
+
+
+
