--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,7 +1,5 @@
-# Use the official PHP-FPM image
 FROM php:8.2-fpm
 
-# Install necessary system packages and PHP extensions
 RUN apt-get update && apt-get install -y \
     gcc \
     make \
@@ -14,15 +12,12 @@ RUN apt-get update && apt-get install -y \
     libzip-dev \
     vim
 
-RUN docker-php-ext-install pdo pdo_mysql
+RUN docker-php-ext-install pdo pdo_mysql sockets
 
-# Install Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-# Install Xdebug
 RUN pecl install xdebug && docker-php-ext-enable xdebug
 
-# Configure Xdebug
 RUN { \
     echo 'zend_extension=xdebug'; \
     echo 'xdebug.mode=debug'; \
@@ -33,20 +28,14 @@ RUN { \
     echo 'xdebug.idekey=PHPSTORM'; \
 } > /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
 
-# Set the working directory
 WORKDIR /var/www/html
 
-# Copy the application code
 COPY . /var/www/html
 
-# Copy custom PHP configuration
 COPY ./docker/php/conf.d/custom.ini /usr/local/etc/php/conf.d/custom.ini
 
-# Copy existing application directory permissions
 RUN chown -R www-data:www-data /var/www/html
 
-# Expose the port PHP-FPM will run on
 EXPOSE 9000
 
-# Command to run PHP-FPM
 CMD ["php-fpm"]
