--- a/docker/php/conf.d/custom.ini
+++ b/docker/php/conf.d/custom.ini
@@ -7,4 +7,4 @@ xdebug.client_host=host.docker.internal
 xdebug.client_port=9004
 xdebug.log_level=0
 xdebug.idekey=PHPSTORM
-
+xdebug.remote_host=docker
