--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,47 +1,64 @@
-networks:
-  notify:
-
 services:
   php:
     build:
-      context: ./
-      dockerfile: ./docker/php/Dockerfile
+      context: .
+      target: app_php
+      args:
+        SYMFONY_VERSION: ${SYMFONY_VERSION:-}
+        STABILITY: ${STABILITY:-stable}
+    restart: unless-stopped
     volumes:
-      - .:/var/www/html:cached
-      - ./docker/php/conf.d/custom.ini:/etc/php/conf.d/php.ini
-    container_name: php8
-    networks:
-      - notify
-
-  phpmyadmin:
-    container_name: phpmyadmin
-    image: phpmyadmin/phpmyadmin
-    restart: always
+      - php_socket:/var/run/php
+    healthcheck:
+      interval: 10s
+      timeout: 3s
+      retries: 3
+      start_period: 30s
+      test: []
     environment:
-      PMA_HOST: db-service
-      MYSQL_ROOT_PASSWORD: root
-    ports:
-      - "8090:80"
-    networks:
-      - notify
+      # Run "composer require symfony/orm-pack" to install and configure Doctrine ORM
+      DATABASE_URL: postgresql://${POSTGRES_USER:-app}:${POSTGRES_PASSWORD:-!ChangeMe!}@database:5432/${POSTGRES_DB:-app}?serverVersion=${POSTGRES_VERSION:-14}&charset=${POSTGRES_CHARSET:-utf8}
+      # Run "composer require symfony/mercure-bundle" to install and configure the Mercure integration
+      MERCURE_URL: ${CADDY_MERCURE_URL:-http://caddy/.well-known/mercure}
+      MERCURE_PUBLIC_URL: https://${SERVER_NAME:-localhost}/.well-known/mercure
+      MERCURE_JWT_SECRET: ${CADDY_MERCURE_JWT_SECRET:-!ChangeThisMercureHubJWTSecretKey!}
 
-  db-service:
-    image: mysql:8.0
-    container_name: mysql
+  caddy:
+    build:
+      context: .
+      target: app_caddy
+    depends_on:
+      - php
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: symfony
-      MYSQL_USER: symfony
-      MYSQL_PASSWORD: symfony
-    ports:
-      - "3306:3306"
+      SERVER_NAME: ${SERVER_NAME:-localhost, caddy:80}
+      MERCURE_PUBLISHER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET:-!ChangeThisMercureHubJWTSecretKey!}
+      MERCURE_SUBSCRIBER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET:-!ChangeThisMercureHubJWTSecretKey!}
+    restart: unless-stopped
     volumes:
-      - db_data:/var/lib/mysql
-    networks:
-      - notify
+      - php_socket:/var/run/php
+      - caddy_data:/data
+      - caddy_config:/config
+    ports:
+      # HTTP
+      - "8001:80"
+ #       published: ${HTTP_PORT:-80}
+  #      protocol: tcp
+      # HTTPS
+#      - target: 443
+ #       published: ${HTTPS_PORT:-443}
+#        protocol: tcp
+      # HTTP/3
+#      - target: 443
+#        published: ${HTTP3_PORT:-443}
+#        protocol: udp
+
+# Mercure is installed as a Caddy module, prevent the Flex recipe from installing another service
+###> symfony/mercure-bundle ###
+###< symfony/mercure-bundle ###
 
 volumes:
-    db_data:
-
-
-
+  php_socket:
+  caddy_data:
+  caddy_config:
+###> symfony/mercure-bundle ###
+###< symfony/mercure-bundle ###
